--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <header class=" p-5">
 
         <nav class="container d-flex justify-content-between align-items-center">
-            <img src="img/logo.png" alt="Logotipo da Tropicália" class="nav-img " loading="lazy">
+            <img src="img/skate olliee.png" alt="Logotipo da Tropicália" class="nav-img " loading="lazy">
             <ul class="nav mt-5">
                 <li class="nav-item"><a class="nav-link" href="#inicio">Início</a></li>
                 <li class="nav-item"><a class="nav-link" href="#galeria">Galeria</a></li>
@@ -39,8 +39,8 @@
         <section id="inicio" class="my-5">
             <div class="inicio-fundo d-flex justify-content-between align-items-center">
                 <div class="esquerda-conteudo">
-                    <h1 class="display-4 text-white fst-italic fw-bold">Boas-vindas a</h1>
-                    <img src="img/logo-2.png" alt="Logotipo secundário da Tropicália" class="mb-3" width="563"
+                    <h1 class="display-4 text-white fst-italic fw-bold">Boas-vindas ao mundo do</h1>
+                    <img src="img/Texto do seu parágrafo.png" alt="Logotipo secundário da Tropicália" class="mb-3" width="563"
                         height="278" loading="lazy">
                     <a href="#tropicalia"
                         class="btn btn-primary btn-lg botao-inicio fw-semibold">Quero
@@ -53,12 +53,12 @@
         <section id="tropicalia" class="my-5 pt-6 secao-tropicalia">
             <div class="container d-flex align-items-center ">
                   <div class="col-5">
-                    <h2>O que foi a Tropicália?</h2>
-                    <p class="p-2">A Tropicália, também conhecida como Tropicalismo, foi um movimento cultural
-                        brasileiro que surgiu na década de 1960, tendo seu auge entre 1967 e 1968. Esse movimento
-                        abrangeu várias expressões artísticas, como a música, o cinema, o teatro e as artes plásticas, e
-                        teve como principal característica a mistura de elementos da cultura brasileira tradicional com
-                        influências estrangeiras, especialmente do rock e da música pop.</p>
+                    <h2>O que é skate?</h2>
+                    <p class="p-2">O skate é um esporte radical realizado sobre uma prancha com rodas e consiste na execução de manobras no chão, pistas e em obstáculos. A prática surgiu nos Estados Unidos e atualmente é um esporte olímpico desde os jogos de Tóquio (2021).
+
+                        Entre as modalidades do skate estão: street, park, vertical, downhill. As manobras do skate são compostas por diferentes tipos de movimentos, que incluem giros e passagens do objeto por obstáculos. A prática do skate é muito comum entre jovens de todo o mundo. Apesar do aumento da profissionalização de atletas no esporte, o skate é majoritariamente praticado como atividade de lazer. A vivência é vista para além de uma atividade física, mas como um elemento de manifestação social e identidade cultural.
+                        
+                        fonte: site brasil escola</p>
                 </div>
             </div>
         </section>
@@ -69,11 +69,15 @@
 
                 <div class="row justify-content-md-center">
                     <div class="col-md-4">
-                        <img src="img/lossy-page1-640px-Jorge_Ben_e_o_Trio_Mocotó_no_Teatro_da_Lagoa,_1971.tif.jpg"
+                        <img src="img/Skate ollie.jpg"
                             class="img-fluid rounded-5" loading="lazy">
                     </div>
                     <div class="col-md-4">
-                        <img src="img/lossy-page1-640px-Os_Mutantes_2.tif.jpg" class="img-fluid rounded-5"
+                        <img src="img/Skate park.jpg" class="img-fluid rounded-5"
+                            loading="lazy">
+                    </div>
+                    <div class="col-md-4">
+                        <img src="img/skate rua.jpg" class="img-fluid rounded-5"
                             loading="lazy">
                     </div>
                 </div>
