--- a/index.html
+++ b/index.html
@@ -33,16 +33,15 @@
        
     </header>
 
-
     <main class="container my-5">
 
         <section id="inicio" class="my-5">
             <div class="inicio-fundo d-flex justify-content-between align-items-center">
                 <div class="esquerda-conteudo">
                     <h1 class="display-4 text-white fst-italic fw-bold">Boas-vindas ao</h1>
-                    <img src="img/Texto do seu parágrafo.png" class="mb-3" width="563"
+                    <img src="img/Mundo do Skate.png" class="mb-3" width="563"
                         height="278" loading="lazy">
-                    <a href="#tropicalia"
+                    <a href="#Mundo do Skate"
                         class="btn btn-primary btn-lg botao-inicio fw-semibold">Quero
                         conhecer!</a>
                 </div>
@@ -50,7 +49,7 @@
               </div>
         </section>
 
-        <section id="tropicalia" class="my-5 pt-6 secao-tropicalia" tabindex="0" aria-label="Seção explicativa sobre a tropicália">
+        <section id="Mundo do Skate" class="my-5 pt-6 secao-tropicalia" tabindex="0" aria-label="Seção explicativa sobre o mundo do skate">
             <div class="container d-flex align-items-center ">
                 <div class="col-4 d-flex justify-content-center ">
                     <img src="img/skate manobra.png" class="rounded-pill" width="273" height="331" loading="lazy">
@@ -85,7 +84,7 @@
                         <img src="img/skate rua.jpg" class="img-fluid rounded-5" loading="lazy">
                     </div>
                     <div class="col-md-4">
-                        <img src="img/lossy-page1-640px-Caetano_Veloso_no_III_Festival_da_Música_Popular.tif.jpg"
+                        <img src="img/Skate pool.jpg"
                             class="img-fluid rounded-5" loading="lazy">
                     </div>
                 </div>
