--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <div class="inicio-fundo d-flex justify-content-between align-items-center">
                 <div class="esquerda-conteudo">
                     <h1 class="display-4 text-white fst-italic fw-bold">Boas-vindas ao</h1>
-                    <img src="img/Mundo do Skate.png" class="mb-3" width="563"
+                    <img src="img/O Mundo do Skate.png" class="mb-3" width="563"
                         height="278" loading="lazy">
                     <a href="#Mundo do Skate"
                         class="btn btn-primary btn-lg botao-inicio fw-semibold">Quero
@@ -57,9 +57,7 @@
                 <div class="col-5">
                     <h2>O que é skate?</h2>
                     <p class="p-2">O skate é um esporte radical realizado sobre uma prancha com rodas e consiste na execução de manobras no chão, pistas e em obstáculos. A prática surgiu nos Estados Unidos e atualmente é um esporte olímpico desde os jogos de Tóquio (2021).
-
                         Entre as modalidades do skate estão: street, park, vertical, downhill. As manobras do skate são compostas por diferentes tipos de movimentos, que incluem giros e passagens do objeto por obstáculos. A prática do skate é muito comum entre jovens de todo o mundo. Apesar do aumento da profissionalização de atletas no esporte, o skate é majoritariamente praticado como atividade de lazer. A vivência é vista para além de uma atividade física, mas como um elemento de manifestação social e identidade cultural.
-                        
                         Fonte: site brasil escola</p>
                 </div>
             </div>
@@ -93,7 +91,7 @@
 
         <section id="contato">
             <div class="container p-5 d-flex justify-content-center">
-                <div class="col-md-8 col-lg-10 rounded-5 formulario"> <!-- Caixa do formulário com 60% de largura -->
+                <div class="col-md-8 col-lg-10 rounded-5 formulario">
                     <h2 class="mb-3">Entre em contato</h2>
                     <form>
                         <div class="form-group mb-3">
